--- a/Proyecto/src/style/base.css
+++ b/Proyecto/src/style/base.css
@@ -16,3 +16,15 @@ body {
   --text-dark: #0d1b2a;  
   --text-light: #e0e1dd;   
 }
+
+.contenedor_main {
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 56px); 
+  font-size: 2rem;
+  flex: 1;
+  padding: 20px;
+  box-sizing: border-box; 
+}
