--- a/Proyecto/src/style/Recuperar.css
+++ b/Proyecto/src/style/Recuperar.css
@@ -53,3 +53,60 @@
   color: #6c757d;
   text-align: center;
 }
+
+.recuperarPIN-container {
+  text-align: center;
+  margin-top: 2rem;
+  padding: 1.5rem 1rem;
+  background: #f3f4f6;
+  border-radius: 12px;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+}
+
+.recuperarPIN-container h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #222;
+  margin-bottom: 1rem;
+}
+
+.recuperarPIN-pin-container {
+
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.recuperarPIN-pin {
+  font-weight: 700;
+  color: #ff0000; 
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+.recuperarPIN-button {
+  padding: 0 1rem;
+  height: 2.8rem; 
+  background-color:  var(--accent);
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background 0.3s ease;
+}
+.recuperarPIN-button:hover {
+  background-color:  var(--block-bg);
+}
+
+.recuperarPIN-container p {
+  font-size: 0.9rem;
+  color: #6c757d;
+}
+
